# aoc

./: .gitignore  README.md
.github/workflows/: build.yaml
2015/src/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
2019/: Cargo.toml
2019/src/: day01.rs  main.rs  util.rs
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day5.rs  day8.rs  day9.rs  main.rs
2022/: Cargo.toml
2022-x64/: Cargo.toml
2022-x64/src/: day15.rs  day16.rs  main.rs
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  main.rs  util.rs
2023-csharp/: AOC2023.sln
2023-csharp/AOC2023/: AOC2023.csproj  Day05.cs  Day05Tests.cs  Day06.cs  Day06Tests.cs  Day07.cs
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  main.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
