[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = { version = "0.5.0", features = ["rp2040-e5"] }
embedded-hal ="0.2.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
fugit = "0.3.6"
heapless = "0.7.16"
